# nodespace-core

./: .gitignore  CLAUDE.md  Cargo.toml  package.json
.github/workflows/: publish-mcp.yml  release.yml
scripts/: download-models.ts  install.sh  refresh-pro-proto.sh  uninstall.sh
